# prefect-addl-utils

./: README.md  pyproject.toml  test.py
.github/workflows/: python-publish.yaml
prefect_addl_utils/: __init__.py  _sample_deploy.py  cli.py  deployment_output.py  deployment_process.py  deployment_rich.py  deployment_tools.py  manage_config.py
test/: _deploy.py  _description.md  flow.py  test.py  test_github.py  test_locally.py  variables.py
